--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
+    "module": "es6",
     "moduleResolution": "node",
     "declaration": false,
     "noImplicitAny": true,
@@ -30,10 +31,8 @@
   "filesGlob": [
     "./lib/**/*.ts",
     "!./lib/**/*.d.ts",
-    "./spec/**/*.ts",
-    "!./spec/**/*.d.ts",
     "./tsd.d.ts",
-    "./lib/omnisharp.d.ts",
+    "./lib/omnisharp.ts",
     "./lib/typings.d.ts"
   ],
   "files": [
@@ -58,7 +57,6 @@
     "./lib/omnisharp-atom/atom/solution-information.ts",
     "./lib/omnisharp-atom/atom/status-bar.ts",
     "./lib/omnisharp-atom/atom/update-projects.ts",
-    "./lib/omnisharp-atom/configure-rx.ts",
     "./lib/omnisharp-atom/features/code-action.ts",
     "./lib/omnisharp-atom/features/code-check.ts",
     "./lib/omnisharp-atom/features/code-format.ts",
@@ -102,33 +100,8 @@
     "./lib/omnisharp-atom/views/status-bar-view.ts",
     "./lib/omnisharp-atom/views/test-results-window.ts",
     "./lib/omnisharp-atom/views/tooltip-view.ts",
-    "./spec/atom/dock-spec.ts",
-    "./spec/atom/framework-selector-spec.ts",
-    "./spec/atom/solution-information-spec.ts",
-    "./spec/atom/status-bar-spec.ts",
-    "./spec/atom/update-project-spec.ts",
-    "./spec/client-manager-spec.ts",
-    "./spec/features/code-format-spec.ts",
-    "./spec/features/code-lens-spec.ts",
-    "./spec/features/command-runner-spec.ts",
-    "./spec/features/find-symbols-spec.ts",
-    "./spec/features/find-usages-spec.ts",
-    "./spec/features/go-to-definition-spec.ts",
-    "./spec/features/highlight-spec.ts",
-    "./spec/features/intellisense-spec.ts",
-    "./spec/features/log-spec.ts",
-    "./spec/features/lookup-spec.ts",
-    "./spec/features/navigate-up-down-spec.ts",
-    "./spec/features/package-restore-spec.ts",
-    "./spec/features/project-lock-spec.ts",
-    "./spec/features/rename-spec.ts",
-    "./spec/features/run-tests-spec.ts",
-    "./spec/features/server-information-spec.ts",
-    "./spec/features/signature-help-spec.ts",
-    "./spec/omnisharp-atom-spec.ts",
-    "./spec/test-helpers.ts",
     "./tsd.d.ts",
-    "./lib/omnisharp.d.ts",
+    "./lib/omnisharp.ts",
     "./lib/typings.d.ts"
   ],
   "exclude": []
