--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prepublish": "./node_modules/.bin/gulp npm-prepublish"
   },
   "dependencies": {
+    "@reactivex/rxjs": "git://github.com/david-driscoll/RxJS-1.git#aaa52e3e",
     "ansi-to-html": "^0.3.0",
     "atom-package-deps": "^2.1.3",
     "atom-space-pen-views": "^2.1.0",
@@ -78,7 +79,7 @@
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
     "ntypescript": "1.201511160604.1",
-    "omnisharp-client": "^3.1.0",
+    "omnisharp-client": "git://github.com/OmniSharp/omnisharp-node-client.git#75c97986",
     "react": "^0.14.0",
     "rimraf": "^2.4.3",
     "semver": "^5.0.3",
