--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "atom-package-deps": "^2.1.3",
     "atom-space-pen-views": "^2.1.0",
     "bluebird": "^2.10.2",
+    "chai": "^3.4.1",
     "del": "^1.1.1",
     "escape-html": "^1.0.1",
     "event-kit": "^1.4.1",
@@ -69,7 +70,7 @@
     "font-awesome": "^4.4.0",
     "fs-plus": "^2.3.1",
     "fuzzaldrin": "^2.1.0",
-    "generator-aspnet": "0.0.81",
+    "generator-aspnet": "0.0.91",
     "glob": "^5.0.15",
     "gulp": "^3.8.11",
     "gulp-babel": "^6.1.0",
@@ -78,6 +79,7 @@
     "jquery": "^2.1.1",
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
+    "mocha": "^2.3.4",
     "ntypescript": "1.201511160604.1",
     "omnisharp-client": "git://github.com/OmniSharp/omnisharp-node-client.git#75c97986",
     "react": "^0.14.0",
@@ -121,6 +123,7 @@
       }
     }
   },
+  "atomTestRunner": "./spec/test-runner",
   "package-deps": [
     "atom-yeoman",
     "linter",
